--- a/package.json
+++ b/package.json
@@ -18,6 +18,18 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@syncfusion/ej2-angular-buttons": "^21.2.3",
+    "@syncfusion/ej2-angular-calendars": "^21.2.3",
+    "@syncfusion/ej2-angular-charts": "^21.2.3",
+    "@syncfusion/ej2-angular-circulargauge": "^21.2.3",
+    "@syncfusion/ej2-angular-diagrams": "^21.2.3",
+    "@syncfusion/ej2-angular-dropdowns": "^21.2.3",
+    "@syncfusion/ej2-angular-grids": "^21.2.3",
+    "@syncfusion/ej2-angular-inputs": "^21.2.3",
+    "@syncfusion/ej2-angular-lists": "^21.2.3",
+    "@syncfusion/ej2-angular-navigations": "^21.2.3",
+    "@syncfusion/ej2-angular-popups": "^21.2.3",
+    "@syncfusion/ej2-angular-splitbuttons": "^21.2.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
